--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
 		<div class="main">
 		<h1>Izzy Conway</h1>
 
-		<h2>Student at the University of Sussex</h2>
+		<h2>Geography Student At The University of Sussex</h2>
 
 		<img src="images/me.jpg" alt="Izzy">
 
-		<h3>About Me</h3>
-		<p>I'm learning how to code at General Assembly. Student at the University of Sussex. (Can type in lorem here, web developer's trick). <P>
+		<h3>To Begin...</h3>
+		<p>I've designed, developed and editied this webpage, using HTML, CSS and Javascript programming. I learnt how to code in Summer 2015, and have continued to practice, through developing this webpage about myself. <P>
 
 
-		<h3> Top Three Favourite Ice Cream Flavours</h3>
+		<h3> Contact Me</h3>
 
 		<ol>
-			<li>Strawberry Cheesecake</li>
-			<li>Chocolate</li>
-			<li>Vanilla</li>
+			<li>Email: ijc21@sussex.ac.uk</li>
+			<li>Post: Isabel Conway, School of Global Studies, University of Sussex, BN1 9RH</li>
 		</ol>
 
-		<h3> Me on the Web</h3>
+		<h3> Find Me on the Web</h3>
 
 		<ul>
 			<li>
