--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<h2>Geography Student At The University of Sussex</h2>
 
-		<img src="images/me.jpg" alt="Izzy">
+		<img src="images/MUNpic.jpg" alt="Izzy">
 
 		<h3>To Begin...</h3>
 		<p>I've designed, developed and editied this webpage, using HTML, CSS, Javascript, Ruby and jQuery programming. I learnt how to code in Summer 2015, and have continued to practice, through developing this webpage about myself. <P>
@@ -30,11 +30,7 @@
 		<h3> Find Me on the Web</h3>
 
 		<ul>
-			<li>
-				<a href="http://twitter.com/chizpot85">
-					Twitter
-				</a>
-			</li>
+			
 			<li>
 				<a href="http://facebook.com/isabel.conway52">
 					Facebook
