--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<h2>Geography Student At The University of Sussex</h2>
 
-		<img src="images/me.jpg" alt="Izzy">
+		<img src="images/MUN pic.jpg" alt="Izzy">
 
 		<h3>To Begin...</h3>
 		<p>I've designed, developed and editied this webpage, using HTML, CSS, Javascript, Ruby and jQuery programming. I learnt how to code in Summer 2015, and have continued to practice, through developing this webpage about myself. <P>
