--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<img src="images/MUNpic.jpg" alt="Izzy">
 
 		<h3>To Begin...</h3>
-		<p>I've designed, developed and editied this webpage, using HTML, CSS, Javascript, Ruby and jQuery programming. I learnt how to code in Summer 2015, and have continued to practice, through developing this webpage about myself. <P>
+		<p>I've designed, developed and editied (and continuously tweeked) this webpage using HTML, CSS, Javascript, Ruby and jQuery programming. I learnt how to code in Summer 2015 and have continued to practice through developing this small webpage. <P>
 
 
 		<h3> Contact Me</h3>
